Make compilation work for turtle stuff. Needs further understanding